modified:   css/main.css 	modified:   css/main.css.map 	modified:   index.html 	modified:   main.js 	new file:   public/fonts/YanoneKaffeesatz-Light.ttf 	modified:   scss/_fonts.scss 	modified:   scss/_globals.scss 	modified:   scss/_utils.scss 	modified:   scss/block/_benefits.scss 	new file:   scss/block/_effectiveness.scss 	new file:   scss/block/_footer.scss 	modified:   scss/block/_header.scss 	modified:   scss/block/_hero.scss 	new file:   scss/block/_importance.scss 	new file:   scss/block/_symptoms.scss 	new file:   scss/block/_thanks.scss 	modified:   scss/block/_thrush.scss 	new file:   scss/block/_treatment.scss 	modified:   scss/block/_usage.scss 	modified:   scss/main.scss

--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -2,10 +2,11 @@
 
 html {
   overflow: hidden;
+  font-size: vw(16px);
 }
 
 body {
-  @include fluid-text(14, 18);
+  font-size: 1rem;
   font-family: var(--font-family);
   color: var(--text-regular);
   overflow: hidden;
