--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,3 +10,10 @@
 @use "block/benefits";
 @use "block/usage";
 @use "block/thrush";
+@use "block/symptoms";
+@use "block/importance";
+@use "block/treatment";
+@use "block/effectiveness";
+@use "block/thanks";
+
+@use "block/footer";
