--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -61,3 +61,11 @@
   font-style: normal;
   font-display: swap;
 }
+
+@font-face {
+  font-family: "Yanone Kaffeesatz";
+  src: url("../public/fonts/YanoneKaffeesatz-Light.ttf") format("woff2");
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
